Bug 1347007 - Register with the profiler after doing so for the ThreadManager. r=njn

MozReview-Commit-ID: 6gtDxmlgOta